Set textare to `display: block` to remove baseline spacing (fixes #1178)

--- a/src/textfield/_textfield.scss
+++ b/src/textfield/_textfield.scss
@@ -83,6 +83,10 @@
   }
 }
 
+.mdl-textfield textarea.mdl-textfield__input {
+  display: block;
+}
+
 // Styling for the label / floating label.
 .mdl-textfield__label {
   bottom: 0;
